fix:Fix overflow issue

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,7 @@ body {
     box-sizing: border-box;
     height: 100vh;
     min-height: 100%;
+    overflow: hidden;
 }
 
 #root {
