--- a/src/styles/layout/HeaderContent.module.scss
+++ b/src/styles/layout/HeaderContent.module.scss
@@ -11,7 +11,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
         margin: auto;
+        overflow: hidden;
     }
 }
 
